--- a/styles/disposal.css
+++ b/styles/disposal.css
@@ -198,7 +198,7 @@
 }
 
 .form__wrapper {
-    background: url(/assets/form-bg.webp);
+    background: url(assets/form-bg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 56px 30px;
